--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "maska": "^2.1.10",
     "vue": "^3.3.4",
-    "vue-imask": "^7.1.3"
+    "vue-imask": "^7.1.3",
+    "vue-recaptcha": "^3.0.0-alpha.6",
+    "vue3-recaptcha-v2": "^2.0.1",
+    "vue3-recaptcha2": "^1.8.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
